Bug 301673 - Task Manager widget can be scaled down too far
Summary: Task Manager widget can be scaled down too far
Status: RESOLVED FIXED
Alias: None
Product: plasma4
Classification: Unmaintained
Component: widget-taskbar (other bugs)
Version First Reported In: git master
Platform: Gentoo Packages Linux
: NOR normal
Target Milestone: ---
Assignee: Plasma Bugs List
URL: https://bugs.kde.org/show_bug.cgi?id=...
Keywords:
Depends on:
Blocks: plasmoid-resizing
  Show dependency treegraph
 
Reported: 2012-06-11 18:31 UTC by Janek Bevendorff
Modified: 2013-06-17 23:21 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Janek Bevendorff 2012-06-11 18:31:18 UTC
The Task Manager widget can be scaled down too far. It should have a decent minimum size where all the tasks are still visible and clickable. There should also be a proper minimum size when the widget does not contain any tasks at the moment.

Reproducible: Always

Steps to Reproduce:
1. Add Task Manager widget to your desktop
2. Scale it down as much as possible
Actual Results:  
Widget can be scaled down too much, it does not have any proper scale limits.

Expected Results:  
There should be a minimum size depending on the number of tasks. All icons should be visible and usable at any time. If new tasks come, the widget must be scaled up automatically if necessary (and possible).

Widget should also look good at its minimum size when there are no tasks.
Comment 1 Gregor Tätzner 2013-06-17 23:21:46 UTC
Git commit 5810f87d77a4874049119ddf7d4b5576de8efa0e by Gregor Tätzner.
Committed on 18/06/2013 at 01:20.
Pushed by gregort into branch 'master'.

widget-taskbar: set minimum width and height

M  +4    -0    plasma/desktop/applets/tasks/package/contents/ui/main.qml
M  +1    -0    plasma/desktop/applets/tasks/tasks.cpp

http://commits.kde.org/kde-workspace/5810f87d77a4874049119ddf7d4b5576de8efa0e