widget-taskbar: set minimum width and height

BUG: 301673